<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EditFragment">

    <ImageView
        android:id="@+id/ivAvtoImage"
        android:layout_width="210dp"
        android:layout_height="190dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/proekt" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="298dp"
        android:layout_height="65dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/seekBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvtoImage">

        <RadioButton
            android:id="@+id/rbBenAdd"
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/Ben" />

        <RadioButton
            android:id="@+id/rbDizAdd"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Diz" />

        <RadioButton
            android:id="@+id/rbElAdd"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/El" />

    </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="222dp"
            android:layout_height="50dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="61dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/seekBar2">

            <RadioButton
                android:id="@+id/rbAvtAdd"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/Avtomat" />

            <RadioButton
                android:id="@+id/rbMehAdd"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/Mehanika" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="88dp"
            android:layout_height="51dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/Kpp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup3" />

        <TextView
            android:id="@+id/sbVolume2"
            android:layout_width="64dp"
            android:layout_height="28dp"
            android:layout_marginStart="77dp"
            android:layout_marginEnd="77dp"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar2"
            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
            app:layout_constraintStart_toEndOf="@+id/tvObDvi" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/seekBar"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="@+id/seekBar"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etBrandAdd"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Brand"
        android:inputType="text"
        android:textColorHint="#0E0E0E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etModelAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivAvtoImage"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etModelAdd"
        android:layout_width="131dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Model"
        android:inputType="number|text"
        android:textColorHint="#0E0E0E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etYearAdd"
        app:layout_constraintEnd_toEndOf="@+id/etBrandAdd"
        app:layout_constraintStart_toStartOf="@+id/etBrandAdd"
        app:layout_constraintTop_toBottomOf="@+id/etBrandAdd" />

    <EditText
        android:id="@+id/etYearAdd"
        android:layout_width="129dp"
        android:layout_height="39dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="551dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName|text"
        android:textColorHint="#0E0E0E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etModelAdd"
        app:layout_constraintStart_toStartOf="@+id/etModelAdd"
        app:layout_constraintTop_toBottomOf="@+id/etModelAdd" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="80dp"
            android:layout_weight="1"
            android:max="500000"
            android:progress="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="125dp"
            android:text="@string/Mileage"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

        <TextView
            android:id="@+id/sbVolume"
            android:layout_width="95dp"
            android:layout_height="22dp"
            android:text="@string/_0_km"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Power"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar2"
            app:layout_constraintEnd_toStartOf="@+id/seekBar2"
            app:layout_constraintStart_toStartOf="@+id/textView9" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="199dp"
        android:layout_height="55dp"
        android:layout_marginBottom="19dp"
        android:max="650"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="195dp"
            android:layout_height="52dp"
            android:layout_marginBottom="31dp"
            android:indeterminate="false"
            android:max="6000"
            android:progress="10"
            app:layout_constraintBottom_toTopOf="@+id/seekBar2"
            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/seekBar2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/tvObDvi"
            android:layout_width="98dp"
            android:layout_height="47dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/tvPowersize"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar3"
            app:layout_constraintEnd_toStartOf="@+id/seekBar3"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <TextView
            android:id="@+id/sbVolume3"
            android:layout_width="80dp"
            android:layout_height="24dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:text="@string/tvOD"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar3"
            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
            app:layout_constraintStart_toStartOf="@+id/seekBar3" />

    </androidx.constraintlayout.widget.ConstraintLayout>